# aphrodite-engine

./: .clang-format  .dockerignore  .env  .gitignore  .gitmodules  .pylintrc  =49.4.0  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.aarch64  Dockerfile.cpu  Dockerfile.neuron  Dockerfile.openvino  Dockerfile.ppc64le  Dockerfile.rocm  Dockerfile.tpu  Dockerfile.xpu  E=8,N=7168,device_name=NVIDIA_A40.json  LICENSE  MANIFEST.in  README.md  amdpatch.sh  base.py  build-linux-wheel.sh  build-windows-wheel.cmd  build.bat  build_and_upload_docker.sh  build_exe.py  build_wheel.sh  chat.py  chat.sh  config.yaml  decode.py  dist.py  entrypoint.sh  env.py  environment.yaml  formatting.ps1  (+34 more)
.VSCodeCounter/2023-07-29_04-04-51/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.md  results.txt
.VSCodeCounter/2023-07-29_04-05-17/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.md  results.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 100-documentation.yml  300-usage.yml  400-bug-report.yml  500-feature-request.yml  600-new-model.yml  800-quantization.yml  900-misc.yml
.github/workflows/: clang-format.yml  deploy.yml  publish.yml  pylint.yml  ruff.yml  thumbnail.yml  yapf.yml
aphrodite/: __init__.py  _core_ext.py  _custom_ops.py  _ipex_ops.py  block.py  config.py  connections.py  constants.py  envs.py  logger.py  outputs.py  py.typed  sampling_params.py  sequence.py  utils.py  version.py
aphrodite/adapter_commons/: models.py
aphrodite/assets/: audio.py  base.py  image.py  video.py
aphrodite/attention/: __init__.py  layer.py  selector.py
aphrodite/cfg/: cfg_model_runner.py  cfg_worker.py  separated_worker.py
aphrodite/common/: block.py  config.py  connections.py  endpoint_scripts.py  envs.py  gguf.py  grammar.py  inputs.py  logger.py  logits.py  logits_processor.py  outputs.py  passthrough.py  pooling_params.py  prefix.py  sampling_params.py  sequence.py  test_utils.py  utils.py
aphrodite/compilation/: backends.py  wrapper.py
aphrodite/control_vectors/: models.py  request.py  worker_manager.py
aphrodite/distributed/: __init__.py  communication_op.py  parallel_state.py  utils.py
aphrodite/endpoints/: api_server.py  api_server_alt.py  api_server_kobold.py  api_server_ooba.py  chat_utils.py  cli.py  configure.py  llm.py  logger.py  protocol.py
aphrodite/engine/: aphrodite.py  aphrodite_engine.py  args.py  args_tools.py  async_aphrodite.py  local_worker_utils.py  metrics.py  metrics_types.py  protocol.py  ray_tools.py  tokenizer_tools.py
aphrodite/executor/: cpu_executor.py  distributed_gpu_executor.py  executor_base.py  gpu_executor.py  msgspec_utils.py  multiproc_gpu_executor.py  multiproc_worker_utils.py  multiproc_xpu_executor.py  neuron_executor.py  openvino_executor.py  ray_gpu_executor.py  ray_tpu_executor.py  ray_utils.py  ray_xpu_executor.py  tpu_executor.py  utils.py  xpu_executor.py
aphrodite/inputs/: __init__.py  data.py  parse.py  preprocess.py  registry.py
aphrodite/kv_quant/: calib_dataloader.py  calibrate.py  calibration.py  export_kv_params.py  observer.py  utils.py
aphrodite/lora/: __init__.py  fully_sharded_layers.py  layers.py  lora.py  models.py  punica.py  request.py  utils.py  worker_manager.py
aphrodite/modeling/: __init__.py  _custom_op.py  hf_downloader.py  loader.py  metadata.py  neuron_loader.py  outlines_decoding.py  outlines_logits_processors.py  parameter.py  pooling_metadata.py  sampling_metadata.py  utils.py
cmake/: cpu_extension.cmake  utils.cmake
docker/: .env  Dockerfile  Dockerfile.cpu  Dockerfile.rocm  docker-compose.yml  entrypoint.sh  env.example  environment.yml
docs/: .gitignore  CNAME  index.md  package.json  pnpm-lock.yaml
examples/: aphrodite_engine_example.py  api_client.py  convert_gguf_to_torch.py  function_call.py  gguf_to_torch.py  gradio_server.py  hadamard_example.py  offline_inference.py  openai_client.py  openai_completions.py  parallel_test.py  perplexity.py  phi3v_example.py  prefix_cache_example.py  pygchat_template.jinja  run_cluster.sh  save_sharded_state.py  slora_inference.py  template_alpaca.jinja  template_chatml.jinja  tensorize_aphrodite_model.py
geppetto/: __init__.py  model.py  utils.py  version.py
kernels/: activation.cpp  activation_kernels.cu  activation_kernels.dp.cpp  attention.cpp  cache.cpp  cache.h  cache_kernels.cu  cache_kernels.dp.cpp  cuda_compat.h  cuda_utils.h  cuda_utils_kernels.cu  cuda_utils_kernels.dp.cpp  dispatch_utils.h  fast_allreduce.cu  fast_allreduce.cuh  fast_allreduce_test.cu  layernorm.cpp  layernorm_kernels.cu  layernorm_kernels.dp.cpp  misc_kernels.cu  ops.h  pos_encoding.cpp  pos_encoding_kernels.cu  pos_encoding_kernels.dp.cpp  pybind.cpp  quant_utils.cuh  quantization-gptq.cpp  quantization.cpp  reduction.cuh  reduction.dp.hpp  topk.cpp  torch_bindings.cpp  transform.dp.cpp
kernels/quantization/eetq/cutlass_kernels/: CMakeLists.txt  cutlass_heuristic.cc  cutlass_heuristic.h  fpA_intB_gemm.cu  fpA_intB_gemm.h  fpA_intB_gemm_wrapper.cu  fpA_intB_gemm_wrapper.h
kernels/quantization/eetq/cutlass_kernels/fpA_intB_gemm/: fpA_intB_gemm.h  fpA_intB_gemm_template.h
kernels/rust/aphrodite-cuda/: Cargo.toml  aphrodite-cuda.rs
kernels/rust/aphrodite-cuda/aphrussy/: config.rs  kernels.rs  llama.rs  loader.rs  mod.rs  refkernels.rs  tmodel.rs  util.rs
kernels/rust/aphrodite-cuda/aphrussy/attention/: batch_info.rs  blocks.rs  cache_engine.rs  cuda_stub.rs  mod.rs
models/: __init__.py  llama.py
patches/: amd.patch
rocm_patch/: commonpy_xformers-0.0.23.rocm.patch  flashpy_xformers-0.0.22.post7.rocm.patch  flashpy_xformers-0.0.23.rocm.patch  rocm_bf16.patch
rocm_path/: commonpy_xformers-0.0.22.post7.rocm.patch  flashpy_xformers-0.0.22.post7.rocm.patch
tests/: attention.py  conftest.py  latency.py  serving.py  test_cache_block_hashing.py  test_config.py  test_embedded_commit.py  test_inputs.py  test_logits_processor.py  test_regression.py  test_sampling_params.py  test_scalartype.py  test_sequence.py  test_sharded_state_loader.py  test_utils.py  throughput.py  utils.py
(+1392 files in other folders)
